	- debugger access is slow: improved by pre-loading windows.
	- can't scroll into the code window: VTi uses a fixed size list without scrollers
	- window focus: fixed (list of the code window has default focus)
	- shortcuts (F2, G, ...): fixed
	- key mapping pb (EE, |): fixed
	- pb with Alpha key: fixed
	- no key auto-repeat: no needs
	- disasm listing:
	- SR flags (VTi emulation):

- 05/05/2004, version 1.70: roms
	Rework in progress.	

=====> TiEmu II project re-starts here <=====

- 02/07/2003, version 1.68: jb
	Removed GTK+ 1.2 to GTK+ 2.0.

- 02/01/2003, version 1.68:
	Removed automake support in ./src. Switched to a pure autoconf support.
	Some warning removed.
	
- 30/01/2003, version 1.67:
	Automake reworked and improved. Bu, I still have these ugly links.
	Compilable under MinGW for K. Kofler.	
	
- 01/11/2002, version 1.66:
	Automake/Autoconf does not support sub-dirs any longer -> file are 
	linked now (ugly !).
	
- 13/10/2002, version 1.65:
	Changed to support libticalcs v4.x.x.
	Compilation fixes.
	
- 02/08/2002, version 1.64:
	Changed to support libticalcs v4.x.x. 
	Compilation fixes.
	
- 02/06/2002, version 1.63b:
	FLASH upgrade support works fine now.
	
- 01/06/2002, version 1.63a:
	Beta release.
	
- 01/06/2002, version 1.62q:
	GUI slightly modified (wizard, ROM version, ...) and FLASH upgrade
	management: support unified.
	
- 31/05/2002, version 1.62p:
	Merge with Win32 port attempt.
	
- 30/05/2002, version 1.62o:
	Linkport improved and cleaned-up. Fully works.
	A FLASH upgraded converted into a ROM image with TiLP works...
	
- 30/05/2002, version 1.62m:
	HW memory support improved but it's still impossible to directly load
	a FLASH upgrade as a ROM image.
	
- 29/05/2002, version 1.62l:
	Attemp to thread TiEmu and to remove suspend/unsuspend removed: failed.
	But, some clean-up has been done.
	
- 29/05/2002, version 1.62k:
	Added the ability to change skin.
	
- 28/05/2002, version 1.62j: