@@ -38,7 +38,7 @@
 #else
 # define TIEMU_VERSION VERSION
 #endif
-#define TIEMU_REQUIRES_LIBFILES_VERSION		"0.5.8"
+#define TIEMU_REQUIRES_LIBFILES_VERSION		"0.6.0"
 #define TIEMU_REQUIRES_LIBCABLES_VERSION	"3.8.1"
 #define TIEMU_REQUIRES_LIBCALCS_VERSION 	"4.5.3"
 
